# scuttlers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cpp-src/: calc.hpp  config.hpp  main.cpp
java-src/: LifeFrame.java  LifePanel.java  Neighboorhood.java
src/: Config.java  LifeFrame.java  LifeMenu.java  LifePanel.java  LifeThread.java  World.java
